--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.16",
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "15.1.1",
