changes of funding.yml

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "developer-portfolio",
+  "name": "Khaany-portfolio",
   "description": "Portfolio of Abdur Rehman",
   "version": "0.1.0",
   "private": true,
